created first website

--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Trent's web site</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav>
+        <h1>Trent's cool website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+            </li>
+
+          <li li class="nav-li">
+            <a href="portfolio.html">portfolio</a>
+        
+      </nav>
+      <main>
+        <!--sidebar Section-->
+        <div class="--sidebar">
+          <img class="sidebar-img" src="images/profile pic.jpg">
+
+        </div>
+        <!--Content Section-->
+         <div class="content">
+          <h2>Trent Anderson</h2>
+          <p>Student At Slidell High</p>
+          <div id="intrests">
+            <h3>intrests</h3>
+            <ul>
+              <li>coding</li>
+              <li>chemistry</li>
+              <li>my pet rat</li>
+            </ul>
+          </div>
+
+
+          </div>
+      </main>
     </div>
   </body>
 </html>
