--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Trent's web site</title>
+    <title>Trents portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
