--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <a href="index.html">Home</a>
             </li>
 
-          <li li class="nav-li">
+          <li class="nav-li">
             <a href="portfolio.html">portfolio</a>
         
       </nav>
       <main>
         <!--sidebar Section-->
-        <div class="--sidebar">
+        <div class="sidebar">
           <img class="sidebar-img" src="images/profile pic.jpg">
 
         </div>
@@ -30,7 +30,7 @@
           <h2>Trent Anderson</h2>
           <p>Student At Slidell High</p>
           <div id="intrests">
-            <h3>intrests</h3>
+            <h3>interests</h3>
             <ul>
               <li>coding</li>
               <li>chemistry</li>
