--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </nav>
       <main>
         <!--sidebar Section-->
-        <div class="sidebar">
+        <div class="--sidebar">
           <img class="sidebar-img" src="images/profile pic.jpg">
-
+          
         </div>
         <!--Content Section-->
          <div class="content">
