--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
             <a href="index.html">Home</a>
             </li>
 
-          <li li class="nav-li">
+          <li class="nav-li">
             <a href="portfolio.html">portfolio</a>
         
       </nav>
