--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 
           <li class="nav-li">
             <a href="portfolio.html">portfolio</a>
-        
+          </li>
+        </ul>
       </nav>
       <main>
         <!--sidebar Section-->
-        <div class="--sidebar">
+        <div class="sidebar">
           <img class="sidebar-img" src="images/profile pic.jpg">
           
         </div>
@@ -29,7 +30,7 @@
          <div class="content">
           <h2>Trent Anderson</h2>
           <p>Student At Slidell High</p>
-          <div id="intrests">
+          <div id="interests">
             <h3>interests</h3>
             <ul>
               <li>coding</li>
