add portfolio page to website

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,11 @@
             <li><a href = "https://www.khanacademy.org/computer-programming/fish-talank/6102972409954304?qa_expand_key=ag5zfmtoYW4tYWNhZGVteXJBCxIIVXNlckRhdGEiHmthaWRfMTAyMjAwMjQ2MTM2MzkyNDMwMTIwMjk3NwwLEghGZWVkYmFjaxiAgMe0mufhCgw&qa_expand_type=comment">fish-talank</a></li>
 
           </ul>
+          <ul id= "portfolio">
+             
+            <li><a href = "https://www.khanacademy.org/computer-programming/trents-house/4928519470694400">trents-house</a></li>
+
+          </ul>
         </div>
       </main>
     </div>
